--- a/app.json
+++ b/app.json
@@ -18,7 +18,11 @@
         },
         "assetBundlePatterns": ["**/*"],
         "ios": {
-            "supportsTablet": true
+            "supportsTablet": true,
+            "bundleIdentifier": "com.yourcompany.yourappname"
+        },
+        "android": {
+            "package": "com.yourcompany.yourappname"
         }
     }
 }
