--- a/app.json
+++ b/app.json
@@ -9,9 +9,9 @@
         "orientation": "portrait",
         "icon": "./assets/icon.png",
         "splash": {
-            "image": "./assets/splash.png",
+            "image": "./assets/logo.png",
             "resizeMode": "contain",
-            "backgroundColor": "#ffffff"
+            "backgroundColor": "#293046"
         },
         "updates": {
             "fallbackToCacheTimeout": 0
@@ -19,10 +19,10 @@
         "assetBundlePatterns": ["**/*"],
         "ios": {
             "supportsTablet": true,
-            "bundleIdentifier": "com.yourcompany.yourappname"
+            "bundleIdentifier": "com.blinqinnovations.pegateenty"
         },
         "android": {
-            "package": "com.yourcompany.yourappname"
+            "package": "com.blinqinnovations.pegateenty"
         }
     }
 }
