--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "axios": "^0.19.0",
     "expo": "^34.0.4",
+    "expo-asset": "^6.0.0",
+    "expo-av": "^6.0.0",
     "expo-barcode-scanner": "^6.0.0",
     "expo-font": "^6.0.1",
     "expo-linear-gradient": "^6.0.0",
