app name change and result text changed

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
     "expo": {
-        "name": "PE Gate Entry",
+        "name": "PBE Gate Entry",
         "slug": "pe_gate_entry2",
         "privacy": "public",
         "sdkVersion": "34.0.0",
