--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "expo-asset": "^6.0.0",
     "expo-av": "^6.0.0",
     "expo-barcode-scanner": "^6.0.0",
+    "expo-camera": "^6.0.0",
     "expo-font": "^6.0.1",
     "expo-linear-gradient": "^6.0.0",
     "expo-permissions": "^6.0.0",
